# bashrc_analyzer

./: .deptry.toml  .gitignore  .python-version  CLAUDE.md  README.md.backup  README_AI_INTEGRATION.md  demo.py  main.py  pyproject.toml  test_basic.py
.github/workflows/: ci.yml
config/: patterns.yaml  prompt.txt
src/bashrc_analyzer/: __init__.py  ai_service.py  pattern_config.py
tests/: test_pattern_config.py
tests/files/: bashrc1  bashrc2  bashrc2.annotated
