[project]
name = "bashrc-analyzer"
version = "0.1.0"
description = "Smart Linter for .bashrc Files - Detect Common HPC Cluster Issues"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml", "anthropic", "openai"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "deptry>=0.23.0",
]
